dropshot/tests/fail/bad_trait_endpoint28.stderr
error[E0308]: mismatched types
  --> tests/fail/bad_trait_endpoint28.rs:19:34
   |
16 |     #[endpoint {
   |     - arguments to this method are incorrect
...
19 |         request_body_max_bytes = "not_a_number",
   |                                  ^^^^^^^^^^^^^^ expected `usize`, found `&str`
   |
note: method defined here
  --> src/api_description.rs
   |
   |     pub fn request_body_max_bytes(mut self, max_bytes: usize) -> Self {
   |            ^^^^^^^^^^^^^^^^^^^^^^
